k8s/gw/gw.yaml
# Gateway configurations.
# Should be installed in the same namespace with the gateway
# deployment.

# Each config has a name, used in virtual service to bind.
#
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gate5000
spec:
  selector:
    app: gate
  servers:
    - hosts:
        - "./*"
      port:
        name: http-registry
        number: 5000
        protocol: HTTP

---
apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: istio
spec:
  controller: istio.io/gateway-controller
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - hostname: "*"
      port: 80
      protocol: HTTP
      routes:
        namespaces:
          from: All
        selector:
          matchLabels:
            selected: "yes"
        kind: HTTPRoute
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: http
  namespace: default
  labels:
    selected: "yes"
spec:
  hostnames: ["httpbin.example.com"]
  rules:
    - matches:
        - path:
            type: Prefix
            value: /get
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              my-added-header: added-value
      forwardTo:
        - serviceName: httpbin
          port: 8000
